--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/Theme.Trab2"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".views.AlunoView"
+            android:exported="false" />
+        <activity
+            android:name=".views.CursoView"
+            android:exported="false" />
+        <activity
+            android:name=".views.AlunoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
