--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
             android:name=".views.CursoView"
             android:exported="false" />
         <activity
-            android:name=".views.AlunoActivity"
+            android:name=".views.AlunoList"
+            android:exported="false" />
+        <activity
+            android:name=".views.CursoList"
             android:exported="false" />
         <activity
             android:name=".views.MainActivity"
